--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" href="/style.css">
         </stylesheet>
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+        <link rel="manifest" href="manifest.json">
         
     </head>
 <body>
