--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>LEAGUE OF LEGENDS</title>
     <head>
         <stylesheet>
-            <link rel="stylesheet" href="/style.css">
+            <link rel="stylesheet" href="style.css">
         </stylesheet>
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
         <link rel="manifest" href="manifest.json">
